# prestino

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: client_connection.rs  error.rs  headers.rs  headers2.rs  lib.rs  main.rs  prestino_client.rs  prestino_error.rs  presto_api.rs  presto_client.rs  statement_executor.rs  utils.rs
src/client_connection/: mod.rs  reqwest_client_connection.rs
src/results/: column.rs  mod.rs  query_error.rs  query_results.rs  query_results_json.rs  query_results_value.rs  query_stats.rs
src/structs/: misc.rs  mod.rs  parse_data_type.rs  query_results.rs  raw_query_results.rs
src/tests/: mod.rs  response_chain.rs  response_set_1.rs
test-resources/etc/: config.properties  jvm.config  password.db
tests/: errors_tests.rs  statement_tests.rs  types_tests.rs
tests/common/: mod.rs
