[package]
name = "prestino"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-std = "1.12"
async-stream = "0.3"
env_logger = "0.10.0"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
maplit = "1.0"
test-log = "0.2"
uuid = { version = "1.2.2", features = [ "v4"] }
wiremock = "0.5"